--- a/README
+++ b/README
@@ -1,5 +1,2 @@
-Starter code for your Sprint0.
-See the assignment in Canvas for details about using the code and working on the assignment.
+Project group 17
 
-
-All this code was written by Caius, one of the original designers for the CS361 course.
